--- a/css/Cuerpo.css
+++ b/css/Cuerpo.css
@@ -1,3 +1,8 @@
+html,
+body{
+  height: 100%;
+}
+
 body {
   background: rgb(255, 255, 255);
   background: -moz-linear-gradient(
@@ -22,7 +27,14 @@ body {
 }
 
 body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+main{
+  flex: 1s 0 auto;
 }
