--- a/css/Cabecera.css
+++ b/css/Cabecera.css
@@ -18,12 +18,14 @@ header span {
   /*background-color: #c94cffc7;*/
   background-color: #173668;
   display: flex;
+  justify-content: center;
 }
 
 .contenedorLogo .contendorLogoComSafe {
   height: 100%;
   width: auto;
   display: flex;
+  justify-content: center;
 }
 .contenedorLogo .contendorLogoComSafe img {
   height: 100%;
@@ -94,6 +96,7 @@ header span {
   list-style: none;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   height: 100%;
   width: 100%;
   margin: 0;
@@ -111,6 +114,7 @@ header span {
   text-decoration: none;
   height: 100%;
   display: flex;
+  align-items: center;
   padding: 0px 20px;
   font-weight: bolder;
 }
@@ -125,6 +129,9 @@ header span {
   font-weight: bolder;
 }
 
+.colorAzul{
+  background-color: #173668;
+}
 
 @media screen and (max-width: 1280px) {
   /*Parte del header */
@@ -138,6 +145,7 @@ header span {
 
   .contenedorLogo {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     height: 15vh;
     width: 100%;
@@ -150,6 +158,7 @@ header span {
   .contenedorBotonesMenuResponsive {
     height: 100%;
     display: flex;
+    align-items: center;
   }
 
   .contenedorBotonesMenuResponsive label {
@@ -159,11 +168,13 @@ header span {
   .contenedorBotonesMenuResponsive .botonMenuResponsive01 {
     height: 100%;
     display: flex;
+    align-items: center;
     transition: ease-in 0.75s all;
   }
 
   .contenedorBotonesMenuResponsive .botonMenuResponsive02 {
     height: 100%;
+    align-items: center;
     transition: ease-in 0.75s all;
   }
 
