--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,17 @@
 
 /* ------------------------------ BODY --------------------------------- */
-html,
-body{
-  height: 100%;
+html{
+  box-sizing: border-box;
   font-size: 62.5%; /** Reset para REMS - 62.5% = 10px de 16px **/
 }
-
-body {
-  background: rgb(255, 255, 255);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#173678",GradientType=1);
-  font-family: 'Lato', sans-serif;
-  font-size: 1.6rem;
-  line-height: 2;
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
 
 main{
@@ -28,13 +19,11 @@ main{
 }
 
 /** Globales **/
-img {
-    max-width: 100%;
-}
+
 .contenedor {
     width: 95%;
     max-width: 120rem; /** = 1200px; **/
-    margin: 0 auto;
+    margin: auto;
 }
 h1 {
     font-size: 3.8rem;
@@ -48,11 +37,11 @@ h3 {
 h4 {
     font-size: 2.6rem;
 }
-
-/* ------------------------------ HEAD --------------------------------- */
-header {
-    width: 100wh;
+h5{
+    font-size: 2.2rem;
 }
+
+/* ------------------------------ HEADER --------------------------------- */
 
 header div,
 header span {
@@ -64,26 +53,23 @@ header span {
     user-select: none; /* Non-prefixed version, currently supported by any browser but < IE9 */
 }
 
-.contenedorLogo {
-    height: 20vh;
-    width: 100%;
-    /*background-color: #c94cffc7;*/
-    background-color: #173668;
-    display: flex;
-    justify-content: center;
+.site-header {
+    background-color: #333333;
+    padding: 1rem 0 3rem 0;
+}
+.site-header.inicio {
+    background-image: url(../img/header.png);
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+    min-height: 60rem;
 }
 
-.contenedorLogo .contendorLogoComSafe {
-    height: 100%;
-    width: auto;
-    display: flex;
-    justify-content: center;
-}
-.contenedorLogo .contendorLogoComSafe img {
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-    padding: 10px 0px;
+.navegacion a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 2.2rem;
+    display: block;
 }
 
 .checkResponsive {
@@ -190,21 +176,8 @@ header span {
 header {
     height: 15vh;
     width: 100%;
-    position: fixed;
     top: 0px;
     z-index: 10000;
-}
-
-.contenedorLogo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 15vh;
-    width: 100%;
-}
-
-.contendorLogoComSafe {
-    padding: 5px 10px;
 }
 
 .contenedorBotonesMenuResponsive {
@@ -293,24 +266,6 @@ header {
 }
 
 /* ------------------------------ MAIN --------------------------------- */
-.contenedor {
-    width: 95%;
-    max-width: 120rem; /** = 1200px; **/
-    margin: 0 auto;
-}
-
-@media (min-width: 768px) {
-    .seccion-inferior {
-        display: flex;
-        justify-content: space-between;
-    }
-    .seccion-inferior .blog {
-        flex-basis: 60%;
-    }
-    .seccion-inferior .testimoniales {
-        flex-basis: calc(40% - 2rem);
-    }
-}
 
 /** Iconos Nosotros **/
 @media (min-width: 768px) {
@@ -327,9 +282,9 @@ header {
         flex-basis: calc(33.3% - 1rem);
     }
 }
-.icono h3 {
+.icono h4 {
     text-transform: uppercase;
-    font-weight: bolder;
+    font-weight: 600;
     padding: 2rem;
 }
 
@@ -337,9 +292,52 @@ header {
     padding: 2rem;
 }
 
+/* ------------------------------ TESTIMONIAL --------------------------------- */
+.contenedor-s{
+    overflow: hidden;
+    margin: auto;
+    
+}
+.slider-test img{
+    width: 100px!important;
+    height: 100px!important;
+    object-fit: cover!important;
+    border-radius: 100%!important;
+    margin: 1rem;
+}
+
+.slider-contenedor{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+}
+
+.slider-test{
+    background-color: #E1E1F4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    align-items: center;
+}
+
+.slider-test{
+    padding-bottom: 5rem;
+}
+.testimonial blockquote {
+    position: relative;
+    padding: 5rem;
+    font-size: 2rem;
+    font-weight: 300;
+    text-align: center;
+}
+
 /* ------------------------------ FOOTER --------------------------------- */
 footer {
-    background-color: #002d6a;
+    background-color: #6D6D6D;
     color: #ffffff;
 }
   
