--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ html{
 }
 
 body {
-  font-family: 'Lato', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
 }
@@ -341,4 +340,31 @@ footer {
     color: #ffffff;
 }
   
+/* ------------------------------ FORM --------------------------------- */
 
+/* FORM ERROR */
+
+.error {
+    width: 100%;
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+}
+
+.error.active {
+    padding: 0.3em;
+}
+
+
+/* INVALID INPUT */
+
+input.invalid {
+    border-color: #900;
+    background-color: rgb(248, 222, 222);
+}
+
+input:focus.invalid {
+    outline: none;
+}
