--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,40 @@ footer {
   
 /* ------------------------------ FORM --------------------------------- */
 
+/* LOGIN */
+.ancho-ini {
+    width: 80%;
+    font-size: small;
+}
+
+@media (min-width: 768px) {
+    .ancho-ini {
+        width: 40%;
+        font-size: 1.5rem;
+    }
+}
+
+/* REGSTROINQUILINO */
+.ancho-ini-ri {
+    width: 80%;
+    font-size: small;
+}
+
+.card-body h4 {
+    font-size: 1.8rem;
+}
+
+@media (min-width: 768px) {
+    .ancho-ini-ri {
+        width: 50%;
+        font-size: 1.5rem;
+    }
+
+    .card-body h4 {
+        font-size: 2.6rem;
+    }
+}
+
 /* FORM ERROR */
 
 .error {
