--- a/css/styleAdmin.css
+++ b/css/styleAdmin.css
@@ -18,7 +18,13 @@
 }
 
 .div-auxiliar{
-    height: 20px;
+    height: 40px;
+}
+
+@media (min-width: 768px){
+    .div-auxiliar {
+        height: 50px;
+    }
 }
 
 
