--- a/css/validacionesLogin.css
+++ b/css/validacionesLogin.css
@@ -5,46 +5,38 @@ label {
 
 .fomulario__input__input {
   display: flex;
-  margin-bottom: 30px;
   background-color: #ffffff;
-  border: 4px solid transparent;
 }
-
+/*
 .fomulario__input__input input {
   border: 0;
   outline: none;
   color: #000000;
   border: 4px solid transparent;
-}
+}*/
 
 .fomulario__input__input input:focus {
-  border: 4px solid #214ee2;
+  border:  solid #214ee2;
   outline: none;
 }
 
 .form-group input:focus {
-  border: 4px solid #214ee2;
+  border:  solid #214ee2;
   outline: none;
 }
 
 .fomulario__input__input:focus {
-  border: 4px solid red;
+  border: solid #900;
+  background-color: rgb(248, 222, 222);
 }
 
 .fomulario__input__error {
-  outline: #141313 solid 4px;
-  background-color: rgb(126, 15, 1);
+  background-color:#900;
   color: #ffffff;
-  text-align: center;
-  height: auto;
-  margin: 0;
-  font-size: 15px;
-  position: relative;
-  left: 10px;
-  width: 95%;
-  border-radius: 50px;
-  padding: 10px 10px;
-  margin-bottom: 20px;
+  width: 100%;
+  font-size: 80%;
+  border-radius: 0 0 5px 5px;
+  padding: 0.3rem;
   display: none;
 }
 
@@ -74,11 +66,11 @@ label {
   align-items: center;
   /*opacity: 0;*/
 }
-
+/*
 .correcto input,
 .form-group input {
   border: 4px solid #000000;
-}
+}*/
 
 .incorrecto {
   color: #bb2929;
